# warcraft

./: .gitignore  CMakeLists.txt  main.cpp
entities/: aircraft.cpp  aircraft.hpp  entity.cpp  entity.hpp  scenenode.cpp  scenenode.hpp
game/: game.cpp  game.hpp
resources/: identifier.hpp  resourceHolder.cpp  resourceHolder.hpp
